// Copyright Â© 2017 The Things Network Foundation, distributed under the MIT license (see LICENSE file)

syntax = "proto3";

package ttn.v3;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/TheThingsNetwork/ttn/api/rights.proto";

option go_package = "github.com/TheThingsNetwork/ttn/pkg/ttnpb";

// Collaborator is the message to define a collaborator of an entity on the network.
message Collaborator {
  // user_id is the ID of the user.
  string user_id = 1 [(gogoproto.customname) = "UserID"];

  // rights is the list of rights the user bears.
  repeated Right rights = 2;
}
